--- a/src/app/price-list/price-list.page.html
+++ b/src/app/price-list/price-list.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Price List</ion-title>
+    <ion-title>Price List - Work in Progress</ion-title>
   </ion-toolbar>
 </ion-header>
 
